objects/Transaction__c.object
<CustomObject>
    <description>Asset related transactions</description>
    <fields>
        <fullName>Aggregate_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset that can span multiple transactions to act as an aggregator.</description>
        <inlineHelpText>Asset that can span multiple transactions to act as an aggregator.</inlineHelpText>
        <label>Aggregate Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Transactions (Aggregate Asset)</relationshipLabel>
        <relationshipName>AggregateTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Balance_Added__c</fullName>
        <label>Balance Added</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Remaining__c</fullName>
        <label>Balance Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Type__c</fullName>
        <label>Balance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bursts</fullName>
                </value>
                <value>
                    <fullName>Gig</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balance_Used__c</fullName>
        <label>Balance Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Amount__c</fullName>
        <label>Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Frequency__c</fullName>
        <label>Charge Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly Recurring</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Usage_Measure__c</fullName>
        <label>Data Usage Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KB</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>TB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Usage__c</fullName>
        <description>Amount of data used.</description>
        <inlineHelpText>Amount of data used.</inlineHelpText>
        <label>Data Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Quantity__c</fullName>
        <label>Duration Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Term__c</fullName>
        <label>Duration Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Date_Time__c</fullName>
        <label>Event Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Plan_From_Date__c</fullName>
        <label>Plan From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_To_Date__c</fullName>
        <label>Plan To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Burst</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Streaming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prem_Content_Class__c</fullName>
        <label>Prem Content Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Movie</fullName>
                </value>
                <value>
                    <fullName>Series</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Description__c</fullName>
        <label>Transaction Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Usage Event</fullName>
                </value>
                <value>
                    <fullName>Monthly Plan Charge</fullName>
                </value>
                <value>
                    <fullName>Balance TopUp Charge</fullName>
                </value>
                <value>
                    <fullName>Premium Content Charge</fullName>
                </value>
                <value>
                    <fullName>Share Event</fullName>
                </value>
                <value>
                    <fullName>Data Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Identity__c</fullName>
        <label>User Identity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Share User</fullName>
                </value>
                <value>
                    <fullName>Account Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>demokey__c</fullName>
        <description>Used as an indicator for the data that is associated to a demo and can be cleaned up or referenced.</description>
        <inlineHelpText>Used as an indicator for the data that is associated to a demo and can be cleaned up or referenced.</inlineHelpText>
        <label>demokey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Related_Asset__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>NAME</columns>
        <columns>Balance_Added__c</columns>
        <columns>Balance_Remaining__c</columns>
        <columns>Balance_Type__c</columns>
        <columns>Balance_Used__c</columns>
        <columns>Charge_Amount__c</columns>
        <columns>Charge_Frequency__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Transactions</fullName>
        <columns>Transaction_Description__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>User_Type__c</columns>
        <columns>User_Identity__c</columns>
        <columns>Balance_Type__c</columns>
        <columns>Balance_Used__c</columns>
        <columns>Balance_Added__c</columns>
        <columns>Balance_Remaining__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Charge_Amount__c</columns>
        <columns>Plan_To_Date__c</columns>
        <columns>Prem_Content_Class__c</columns>
        <columns>Event_Date_Time__c</columns>
        <columns>Duration_Term__c</columns>
        <columns>Duration_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Transactions</label>
    </listViews>
    <nameField>
        <displayFormat>TRN-{000000}</displayFormat>
        <label>Transactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>